--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "movie_review_app" "\0"
+            VALUE "FileDescription", "aicycle_collection_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "movie_review_app" "\0"
+            VALUE "InternalName", "aicycle_collection_app" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "movie_review_app.exe" "\0"
-            VALUE "ProductName", "movie_review_app" "\0"
+            VALUE "OriginalFilename", "aicycle_collection_app.exe" "\0"
+            VALUE "ProductName", "aicycle_collection_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
