--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aicycle.collectionApp">
    <application
-        android:label="Movie Review"
+        android:label="AiCycle Collection"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
