--- a/assets/env/.env_dev
+++ b/assets/env/.env_dev
@@ -1,4 +1,5 @@
 HOST=host_dev
-BASE_URL=https://dev-api-insurance.aicycle.ai
+<!-- BASE_URL=https://imdb-api.com -->
+BASE_URL=https://imdb-api.com
 
     
