--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.5.3+2
   flutter_slidable: ^2.0.0
+  flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.0
   freezed_annotation: ^2.0.3
   get_it: ^7.2.0
