--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   auto_route: ^5.0.2
   cached_network_image: ^3.2.1
-  camerawesome: ^0.3.3
   connectivity_plus: ^3.0.2
   copy_with_extension: ^4.0.2
   cupertino_icons: ^1.0.2
@@ -31,7 +30,7 @@ dependencies:
   flutter_local_notifications: ^12.0.3
   flutter_native_splash: ^2.2.15
   flutter_rating_bar: ^4.0.1
-  flutter_screenutil: ^5.5.3+2
+  flutter_screenutil: ^5.6.1
   flutter_slidable: ^2.0.0
   flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.0
